common/src/main/java/com/example/common/error/ErrorCode.java
package com.example.common.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public enum ErrorCode {

    NOT_FOUND

}
